Justal Kevin : Writting and reading in the interne data of the phone